# lightning-hydra-classifiers

./: .gitignore  .pre-commit-config.yaml  README.md  TransferLearning-Condensed.ipynb  conda_env_gpu.yaml  finetuning_strategy_test.py  pyproject.toml  pytest.ini  requirements.txt  requirements.yaml  requirements_pipreqs.txt  run.py  run_basic.py  run_multi-gpu.py  setup.py
configs/: Extant_config.yaml  PNAS_config.yaml  config.yaml  finetune_config.yaml  multi-gpu.yaml
configs/callbacks/: default.yaml  (+6 more)
lightning_hydra_classifiers/: __init__.py  model_training_w_wandb_versioned_data-[version 2]-refactor_input-and-output_artifact_config.py  train_basic.py  train_multi_gpu.py  transfer_sweep.py
notebooks/: Create_multi-task_dataset_artifacts.ipynb  DebuggingHydraConfigs.ipynb  Exploring model predictions.ipynb  Refactor-DataModule.ipynb  SmartCrop-refactor.ipynb  Testing code for file directory hash comparison and change detection (WIP Nov 2021).ipynb  TransferLearning-Condensed.ipynb  TransferLearning-Tips and Tricks.ipynb  examples.ipynb  finetuning_callback_test.py  finetuning_strategy_test.py  ipython_cell_input.py  multi-task_model-train.ipynb  paleoai_dataset_arithmetic.ipynb  paleoai_dataset_arithmetic_model_benchmark.ipynb  paleoai_dataset_arithmetic_model_benchmark_clean.ipynb  paleoai_dataset_arithmetic_version 2.ipynb  plant2021-pytorch-lightning-starter-training.ipynb  test_pytorch_lightning.ipynb  transfer_learning_tutorial.ipynb  use-pytorch-lightning-with-weights-and-biases.ipynb
old_hydra_configs/: multi-gpu.yaml
src/: train.py
tests/: helpers.py
(+209 files in other folders)
